// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createAxis should create the correct axis given a falsy seriesKey 1`] = `
Object {
  "x": "a",
  "y": "b",
}
`;

exports[`#createAxis should create the correct axis given a truthy seriesKey 1`] = `
Object {
  "seriesKey": "key",
  "x": "a",
  "y": "b",
}
`;

exports[`#createGroupAggregation should create the correct object 1`] = `
Object {
  "$group": Object {
    "_id": Object {
      "$concat": Array [
        "",
        "|",
        Object {
          "$substr": Array [
            Object {
              "$month": "$date",
            },
            0,
            -1,
          ],
        },
        "|",
        Object {
          "$substr": Array [
            "$measures.measure-potato",
            0,
            -1,
          ],
        },
        "|",
        Object {
          "$substr": Array [
            "$potato",
            0,
            -1,
          ],
        },
      ],
    },
    "count": Object {
      "$sum": 1,
    },
    "measure-potato": Object {
      "$first": "$measures.measure-potato",
    },
    "month": Object {
      "$first": Object {
        "$month": "$date",
      },
    },
    "potato": Object {
      "$first": "$potato",
    },
  },
}
`;
